<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkg"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:background="@color/bkg1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/pendaftaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/pendaftaran"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_namadpn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/namadpn"
                    android:layout_width="196dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nd"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_namablkg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/namablkg"
                    android:layout_width="195dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nb"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_tmptlhr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tmptlhr"
                    android:layout_width="196dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/tlhr"
                    android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_tgllhr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tgllhr"
                    android:layout_width="195dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/tgllhr"
                    android:inputType="date|datetime" />

                </com.google.android.material.textfield.TextInputLayout>

            </TableRow>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alamat"
                android:inputType="text"
                android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

        </TableLayout>


            <TextView
                android:id="@+id/jkelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/jk"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/jk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jkl"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jkp" />

            </RadioGroup>


            <TextView
                android:id="@+id/agama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/agama"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/ag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ai"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ak" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ab" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/akp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/akristen" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ah" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/akong" />

            </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_telepon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/telepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telepon"
                android:inputType="number|phone"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_repass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/repass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repass"
            android:inputType="textPassword"
            android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/btnKembali"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kembali"
                        android:background="@color/btn"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="30dp"/>
                    <Button
                        android:id="@+id/btnDaftar"
                        android:text="@string/daftar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="40dp"
                        android:layout_marginBottom="30dp"

                        android:background="@color/btn"/>

        </LinearLayout>


    </LinearLayout>




    </ScrollView>
    



</androidx.constraintlayout.widget.ConstraintLayout>